sass/mystyles.scss
@charset "utf-8";

// Set your brand colors
$blue: #016FB9;

// Update Bulma's global variables
$primary: $blue;
$link: $blue;
$dark: #181818;

//$box-shadow: 0 0 0.5em 0.2em rgba(#333333, 0.1), 0 0px 0 1px rgba(#333333, 0.02);
$box-shadow: 0 white;
$box-radius: 3px;

@import "../node_modules/bulma/bulma.sass";

code {
  color: $primary;
}

.box {
    box-shadow: 0 white;
    border-width: 0.1em;
    border-style: solid;
    border-color: #DDDDDD;
}

.type-heading {
    padding: 0.5em 0;
    border-width: 0 0 0.06em 0;
    border-style: solid;
    border-color: #DDDDDD;
    display: flex;
    align-items: baseline;
    justify-content: space-between;
}

.type-source-link {
    font-size: 0.7em;
    font-weight: normal;
}

.bottom-border {
    border-width: 0 0 0.06em 0;
    border-style: solid;
    border-color: #DDDDDD;
}

.navbar-search-query-input {
    width: 13em;
}


body {
    min-height: 100vh;
}

body .subtitle,
body .title {
    color: $dark;
}

body.dark,
body.dark .box,
body.dark table {
    background-color: $dark;
    color: $light;
}

body.dark th {
    color: $light;
}

body.dark .table.is-hoverable tbody tr:not(.is-selected):hover {
    background-color: #252525;
}

body.dark a:hover {
    color: $light;
}

body.dark .box,
body.dark .type-heading,
body.dark td,
body.dark th {
    border-color: #444444
}

body.dark .subtitle,
body.dark .title {
    color: $light;
}

body.dark footer {
    background-color: #101010;
}

body.dark .bottom-border {
  border-color: #444444
}

body.dark hr {
  background-color: #444444
}

body.dark .input, .textarea, .select select {
    background-color: #363636;
    border-color: #565656;
    border-radius: 4px;
    color: white;
}

body.dark code {
  background: #2A2A2A;
  color: #569cd6;
}

body.dark code a {
  color: #569cd6;
}

body.dark .tag {
  background: #2A2A2A;
  color: $light;
}

// Theme switcher button
@import "https://unpkg.com/open-props/easings.min.css";

.theme-toggle {
    --size: 2rem;
    --icon-fill: #016FB9;
    --icon-fill-hover: #363636;
    background: none;
    border: none;
    padding: 0;
    inline-size: var(--size);
    block-size: var(--size);
    aspect-ratio: 1;
    border-radius: 50%;
    cursor: pointer;
    touch-action: manipulation;
    -webkit-tap-highlight-color: transparent;
    outline-offset: 5px
}

.theme-toggle>svg {
    inline-size: 100%;
    block-size: 100%;
    stroke-linecap: round
}


[data-theme=dark] .theme-toggle {
    --icon-fill-hover: whitesmoke;
}

.sun-and-moon > :is(.moon, .sun, .sun-beams) {
  transform-origin: center;
}

.sun-and-moon > :is(.moon, .sun) {
  fill: var(--icon-fill);
}

.theme-toggle:is(:hover, :focus-visible) > .sun-and-moon > :is(.moon, .sun) {
  fill: var(--icon-fill-hover);
}

.sun-and-moon > .sun-beams {
  stroke: var(--icon-fill);
  stroke-width: 2px;
}

.theme-toggle:is(:hover, :focus-visible) .sun-and-moon > .sun-beams {
  stroke: var(--icon-fill-hover);
}

[data-theme="dark"] .sun-and-moon > .sun {
  transform: scale(1.75);
}

[data-theme="dark"] .sun-and-moon > .sun-beams {
  opacity: 0;
}

[data-theme="dark"] .sun-and-moon > .moon > circle {
  transform: translateX(-7px);
}

@supports (cx: 1) {
  [data-theme="dark"] .sun-and-moon > .moon > circle {
    cx: 17;
    transform: translateX(0);
  }
}

@media (prefers-reduced-motion: no-preference) {
  .sun-and-moon > .sun {
    transition: transform .5s var(--ease-elastic-3);
  }

  .sun-and-moon > .sun-beams {
    transition: transform .5s var(--ease-elastic-4), opacity .5s var(--ease-3);
  }

  .sun-and-moon .moon > circle {
    transition: transform .25s var(--ease-out-5);
  }

  @supports (cx: 1) {
    .sun-and-moon .moon > circle {
      transition: cx .25s var(--ease-out-5);
    }
  }

  [data-theme="dark"] .sun-and-moon > .sun {
    transition-timing-function: var(--ease-3);
    transition-duration: .25s;
    transform: scale(1.75);
  }

  [data-theme="dark"] .sun-and-moon > .sun-beams {
    transition-duration: .15s;
    transform: rotateZ(-25deg);
  }

  [data-theme="dark"] .sun-and-moon > .moon > circle {
    transition-duration: .5s;
    transition-delay: .25s;
  }
}

